--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   http: ^0.13.3
   geolocator: ^7.4.0
   google_maps_flutter: ^2.0.6
+  geocoding: ^2.0.0
 
 dev_dependencies:
   flutter_test:
